--- a/server/.env.example
+++ b/server/.env.example
@@ -21,10 +21,10 @@ FIREBASE_CLIENT_CERT_URL=https://www.googleapis.com/robot/v1/metadata/x509/fireb
 # Circle CI Configuration
 CIRCLE_CI_TOKEN=your-circle-ci-token
 E2E_PIPELINE_URL=circle-ci-pipeline-url
+GITHUB_TOKEN=your-github-token
 
 # Other existing environment variables
 CYPRESS_API_KEY=your-cypress-api-key
-DATA_DIR=./data
 JIRA_BASE_URL=your-jira-base-url
 JIRA_API_TOKEN=your-jira-api-token
 JIRA_EMAIL=your-jira-email
