feat(ci): Add DATA_DIR environment variable to .env.example

--- a/server/.env.example
+++ b/server/.env.example
@@ -25,6 +25,7 @@ GITHUB_TOKEN=your-github-token
 
 # Other existing environment variables
 CYPRESS_API_KEY=your-cypress-api-key
+DATA_DIR=./data
 JIRA_BASE_URL=your-jira-base-url
 JIRA_API_TOKEN=your-jira-api-token
 JIRA_EMAIL=your-jira-email
