--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -158,7 +158,7 @@ jobs:
           echo $! > server.pid
 
           # Wait for server to be ready
-          timeout 60 bash -c 'until curl -f http://localhost:${{ secrets.SERVER_PORT || '3000' }}/health; do sleep 2; done'
+          timeout 60 bash -c 'until curl -sf http://localhost:${{ secrets.SERVER_PORT || '3000' }}/health; do sleep 2; done'
 
       - name: Start client development server
         working-directory: ./client
@@ -179,7 +179,7 @@ jobs:
           echo $! > client.pid
 
           # Wait for client to be ready
-          timeout 60 bash -c 'until curl -f http://localhost:${{ secrets.CLIENT_PORT || '5173' }}; do sleep 2; done'
+          timeout 60 bash -c 'until curl -sf http://localhost:${{ secrets.CLIENT_PORT || '5173' }}; do sleep 2; done'
 
       - name: Run E2E tests
         working-directory: ./tests/e2e-tests
