feat(server): Add environment variables for brute-force protection configuration

--- a/server/.env.example
+++ b/server/.env.example
@@ -29,3 +29,7 @@ DATA_DIR=./data
 JIRA_BASE_URL=your-jira-base-url
 JIRA_API_TOKEN=your-jira-api-token
 JIRA_EMAIL=your-jira-email
+
+# Brute-force protection settings
+BRUTE_FORCE_WINDOW_MS=600000
+BRUTE_FORCE_MAX_ATTEMPTS=3
