--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -71,12 +71,155 @@ jobs:
     name: E2E Testing
     runs-on: ubuntu-latest
     needs: [ integration-testing ]
+    timeout-minutes: 30
     steps:
-      - name: Run E2E tests
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22.16.0'
+          cache: 'npm'
+          cache-dependency-path: |
+            server/package-lock.json
+            client/package-lock.json
+            tests/e2e-tests/package-lock.json
+
+      - name: Install server dependencies
+        working-directory: ./server
+        run: npm ci
+
+      - name: Install client dependencies
+        working-directory: ./client
+        run: npm ci
+
+      - name: Install e2e test dependencies
+        working-directory: ./tests/e2e-tests
+        run: npm ci
+
+      - name: Install Playwright browsers
+        working-directory: ./tests/e2e-tests
+        run: npx playwright install chromium --with-deps
+
+      - name: Build client application
+        working-directory: ./client
+        run: npm run build
+
+      - name: Build server application
+        working-directory: ./server
+        run: npm run build
+
+      - name: Setup test database
         run: |
-          echo "=== E2E Testing ==="
-          echo "Running end-to-end tests..."
-          echo "TODO: Implement E2E testing"
+          # Start MySQL service
+          sudo systemctl start mysql
+          # Create test database
+          mysql -u root -p${{ secrets.MYSQL_ROOT_PASSWORD || 'root' }} -e "CREATE DATABASE IF NOT EXISTS ${{ secrets.MYSQL_TEST_DATABASE || 'cypress_dashboard_test' }};"
+
+      - name: Run database migrations
+        working-directory: ./server
+        run: npm run migrate
+        env:
+          MYSQL_HOST: ${{ secrets.MYSQL_HOST || 'localhost' }}
+          MYSQL_PORT: ${{ secrets.MYSQL_PORT || '3306' }}
+          MYSQL_USER: ${{ secrets.MYSQL_USER || 'root' }}
+          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD || secrets.MYSQL_ROOT_PASSWORD || 'root' }}
+          MYSQL_DATABASE: ${{ secrets.MYSQL_TEST_DATABASE || 'cypress_dashboard_test' }}
+
+      - name: Start server in background
+        working-directory: ./server
+        run: |
+          # Set up environment variables for testing
+          cat > .env << EOF
+          NODE_ENV=test
+          DATA_DIR=./data
+          BRUTE_FORCE_WINDOW_MS=600000
+          BRUTE_FORCE_MAX_ATTEMPTS=20
+          PORT=${{ secrets.SERVER_PORT || '3000' }}
+          MYSQL_HOST=${{ secrets.MYSQL_HOST || 'localhost' }}
+          MYSQL_PORT=${{ secrets.MYSQL_PORT || '3306' }}
+          MYSQL_USER=${{ secrets.MYSQL_USER || 'root' }}
+          MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD || secrets.MYSQL_ROOT_PASSWORD || 'root' }}
+          MYSQL_DATABASE=${{ secrets.MYSQL_TEST_DATABASE || 'cypress_dashboard_test' }}
+          API_SECURITY_KEY=${{ secrets.API_SECURITY_KEY }}
+          FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
+          FIREBASE_PRIVATE_KEY="${{ secrets.FIREBASE_PRIVATE_KEY }}"
+          FIREBASE_CLIENT_EMAIL=${{ secrets.FIREBASE_CLIENT_EMAIL }}
+          FIREBASE_PRIVATE_KEY_ID=${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
+          FIREBASE_CLIENT_ID=${{ secrets.FIREBASE_CLIENT_ID }}
+          FIREBASE_CLIENT_CERT_URL=${{ secrets.FIREBASE_CLIENT_CERT_URL }}
+          GITHUB_TOKEN=${{ secrets.SERVER_GITHUB_TOKEN }}
+          JIRA_API_TOKEN=${{ secrets.JIRA_API_TOKEN }}
+          JIRA_BASE_URL=${{ secrets.JIRA_BASE_URL }}
+          CIRCLE_CI_TOKEN=${{ secrets.CIRCLE_CI_TOKEN }}
+          EOF
+
+          # Start server in background
+          npm start &
+          echo $! > server.pid
+
+          # Wait for server to be ready
+          timeout 60 bash -c 'until curl -sf http://localhost:${{ secrets.SERVER_PORT || '3000' }}/health; do sleep 2; done'
+
+      - name: Start client development server
+        working-directory: ./client
+        run: |
+          # Set up environment variables for testing
+          cat > .env << EOF
+          VITE_API_URL=http://localhost:${{ secrets.SERVER_PORT || '3000' }}
+          VITE_FIREBASE_API_KEY=${{ secrets.FIREBASE_API_KEY }}
+          VITE_FIREBASE_AUTH_DOMAIN=${{ secrets.FIREBASE_AUTH_DOMAIN }}
+          VITE_FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
+          VITE_FIREBASE_STORAGE_BUCKET=${{ secrets.FIREBASE_STORAGE_BUCKET }}
+          VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}
+          VITE_FIREBASE_APP_ID=${{ secrets.FIREBASE_APP_ID }}
+          EOF
+
+          # Start client dev server in background
+          npm run dev &
+          echo $! > client.pid
+
+          # Wait for client to be ready
+          timeout 60 bash -c 'until curl -sf http://localhost:${{ secrets.CLIENT_PORT || '5173' }}; do sleep 2; done'
+
+      - name: Run E2E tests
+        working-directory: ./tests/e2e-tests
+        run: |
+          # Set up environment variables for e2e tests
+          cat > .env << EOF
+          BASE_URL=http://localhost:${{ secrets.CLIENT_PORT || '5173' }}
+          API_URL=http://localhost:${{ secrets.SERVER_PORT || '3000' }}
+          API_SECURITY_KEY=${{ secrets.API_SECURITY_KEY }}
+          CI=true
+          EOF
+
+          # Run the tests
+          npm run test:chromium
+        env:
+          CI: true
+
+      - name: Upload test videos
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: e2e-test-videos
+          path: tests/e2e-tests/test-results/
+          retention-days: 3
+
+      - name: Cleanup processes
+        if: always()
+        run: |
+          # Kill background processes
+          if [ -f ./server/server.pid ]; then
+            kill $(cat ./server/server.pid) || true
+          fi
+          if [ -f ./client/client.pid ]; then
+            kill $(cat ./client/client.pid) || true
+          fi
+          # Kill any remaining processes on the ports
+          sudo lsof -ti:${{ secrets.SERVER_PORT || '3000' }} | xargs -r sudo kill -9 || true
+          sudo lsof -ti:${{ secrets.CLIENT_PORT || '5173' }} | xargs -r sudo kill -9 || true
 
   # Job 8: Final validation and summary
   validation-summary:
