--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -59,6 +59,7 @@ jobs:
     name: Integration Testing
     runs-on: ubuntu-latest
     needs: [ validate-client, validate-server, validate-cron, validate-scripts ]
+    if: always()
     steps:
       - name: Run integration tests
         run: |
@@ -71,6 +72,7 @@ jobs:
     name: E2E Testing
     runs-on: ubuntu-latest
     needs: [ integration-testing ]
+    if: always()
     timeout-minutes: 30
     steps:
       - name: Checkout repository
