--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -67,8 +67,8 @@ jobs:
   integration-testing:
     name: Integration Testing
     runs-on: ubuntu-latest
-    needs: [ validate-client, validate-server, validate-cron, validate-scripts, validate-docs ]
-    if: always()
+    needs: [ basic-validation, validate-client, validate-server, validate-cron, validate-scripts, validate-docs ]
+    if: needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true'
     steps:
       - name: Run integration tests
         run: |
@@ -81,7 +81,7 @@ jobs:
     name: E2E Testing
     runs-on: ubuntu-latest
     needs: [ integration-testing ]
-    if: always()
+    if: needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true'
     timeout-minutes: 30
     steps:
       - name: Checkout repository
