fix: Update AuthValidationResponse schema to include required fields

--- a/server/docs/api-documentation/schemas/AuthValidationResponse.yaml
+++ b/server/docs/api-documentation/schemas/AuthValidationResponse.yaml
@@ -1,11 +1,9 @@
-description: ''
-content:
-  application/json:
-    schema:
-      type: object
-      properties:
-        valid:
-          type: boolean
-        message:
-          type: string
-headers: {}
+type: object
+properties:
+  valid:
+    type: boolean
+  message:
+    type: string
+required:
+  - valid
+  - message
