--- a/.github/workflows/validate-integration.yml
+++ b/.github/workflows/validate-integration.yml
@@ -18,85 +18,6 @@ on:
         required: false
         type: string
         default: './server'
-      MYSQL_ROOT_PASSWORD:
-        description: 'MySQL root password'
-        required: false
-        type: string
-        default: 'root'
-      MYSQL_TEST_DATABASE:
-        description: 'Test database name'
-        required: false
-        type: string
-        default: 'cypress_dashboard_test'
-      MYSQL_HOST:
-        description: 'MySQL host'
-        required: false
-        type: string
-        default: 'localhost'
-      MYSQL_PORT:
-        description: 'MySQL port'
-        required: false
-        type: string
-        default: '3306'
-      MYSQL_USER:
-        description: 'MySQL user'
-        required: false
-        type: string
-        default: 'root'
-      MYSQL_PASSWORD:
-        description: 'MySQL password'
-        required: false
-        type: string
-        default: 'root'
-      SERVER_PORT:
-        description: 'Server port'
-        required: false
-        type: string
-        default: '3000'
-      API_SECURITY_KEY:
-        description: 'API security key'
-        required: false
-        type: string
-      FIREBASE_PROJECT_ID:
-        description: 'Firebase project ID'
-        required: false
-        type: string
-      FIREBASE_PRIVATE_KEY:
-        description: 'Firebase private key'
-        required: false
-        type: string
-      FIREBASE_CLIENT_EMAIL:
-        description: 'Firebase client email'
-        required: false
-        type: string
-      FIREBASE_PRIVATE_KEY_ID:
-        description: 'Firebase private key ID'
-        required: false
-        type: string
-      FIREBASE_CLIENT_ID:
-        description: 'Firebase client ID'
-        required: false
-        type: string
-      FIREBASE_CLIENT_CERT_URL:
-        description: 'Firebase client cert URL'
-        required: false
-        type: string
-      SERVER_GITHUB_TOKEN:
-        description: 'Server GitHub token'
-        required: false
-        type: string
-      JIRA_API_TOKEN:
-        description: 'Jira API token'
-        required: false
-        type: string
-      JIRA_BASE_URL:
-        description: 'Jira base URL'
-        required: false
-        type: string
-      CIRCLE_CI_TOKEN:
-        description: 'CircleCI token'
-        required: false
-        type: string
 
 permissions:
   contents: read
@@ -137,17 +58,17 @@ jobs:
           # Start MySQL service
           sudo systemctl start mysql
           # Create test database
-          mysql -u root -p${{ inputs.MYSQL_ROOT_PASSWORD }} -e "CREATE DATABASE IF NOT EXISTS ${{ inputs.MYSQL_TEST_DATABASE }};"
+          mysql -u root -p${{ secrets.MYSQL_ROOT_PASSWORD || 'root' }} -e "CREATE DATABASE IF NOT EXISTS ${{ secrets.MYSQL_TEST_DATABASE || 'cypress_dashboard_test' }};"
 
       - name: Run database migrations
         working-directory: ${{ inputs.server-working-directory }}
         run: npm run migrate
         env:
-          MYSQL_HOST: ${{ inputs.MYSQL_HOST }}
-          MYSQL_PORT: ${{ inputs.MYSQL_PORT }}
-          MYSQL_USER: ${{ inputs.MYSQL_USER }}
-          MYSQL_PASSWORD: ${{ inputs.MYSQL_PASSWORD }}
-          MYSQL_DATABASE: ${{ inputs.MYSQL_TEST_DATABASE }}
+          MYSQL_HOST: ${{ secrets.MYSQL_HOST || 'localhost' }}
+          MYSQL_PORT: ${{ secrets.MYSQL_PORT || '3306' }}
+          MYSQL_USER: ${{ secrets.MYSQL_USER || 'root' }}
+          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD || secrets.MYSQL_ROOT_PASSWORD || 'root' }}
+          MYSQL_DATABASE: ${{ secrets.MYSQL_TEST_DATABASE || 'cypress_dashboard_test' }}
       - name: Start server in background
         working-directory: ${{ inputs.server-working-directory }}
         run: |
@@ -157,23 +78,23 @@ jobs:
           DATA_DIR=./data
           BRUTE_FORCE_WINDOW_MS=600000
           BRUTE_FORCE_MAX_ATTEMPTS=20
-          PORT=${{ inputs.SERVER_PORT }}
-          MYSQL_HOST=${{ inputs.MYSQL_HOST }}
-          MYSQL_PORT=${{ inputs.MYSQL_PORT }}
-          MYSQL_USER=${{ inputs.MYSQL_USER }}
-          MYSQL_PASSWORD=${{ inputs.MYSQL_PASSWORD }}
-          MYSQL_DATABASE=${{ inputs.MYSQL_TEST_DATABASE }}
-          API_SECURITY_KEY=${{ inputs.API_SECURITY_KEY }}
-          FIREBASE_PROJECT_ID=${{ inputs.FIREBASE_PROJECT_ID }}
-          FIREBASE_PRIVATE_KEY="${{ inputs.FIREBASE_PRIVATE_KEY }}"
-          FIREBASE_CLIENT_EMAIL=${{ inputs.FIREBASE_CLIENT_EMAIL }}
-          FIREBASE_PRIVATE_KEY_ID=${{ inputs.FIREBASE_PRIVATE_KEY_ID }}
-          FIREBASE_CLIENT_ID=${{ inputs.FIREBASE_CLIENT_ID }}
-          FIREBASE_CLIENT_CERT_URL=${{ inputs.FIREBASE_CLIENT_CERT_URL }}
-          GITHUB_TOKEN=${{ inputs.SERVER_GITHUB_TOKEN }}
-          JIRA_API_TOKEN=${{ inputs.JIRA_API_TOKEN }}
-          JIRA_BASE_URL=${{ inputs.JIRA_BASE_URL }}
-          CIRCLE_CI_TOKEN=${{ inputs.CIRCLE_CI_TOKEN }}
+          PORT=${{ secrets.SERVER_PORT || '3000' }}
+          MYSQL_HOST=${{ secrets.MYSQL_HOST || 'localhost' }}
+          MYSQL_PORT=${{ secrets.MYSQL_PORT || '3306' }}
+          MYSQL_USER=${{ secrets.MYSQL_USER || 'root' }}
+          MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD || secrets.MYSQL_ROOT_PASSWORD || 'root' }}
+          MYSQL_DATABASE=${{ secrets.MYSQL_TEST_DATABASE || 'cypress_dashboard_test' }}
+          API_SECURITY_KEY=${{ secrets.API_SECURITY_KEY }}
+          FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
+          FIREBASE_PRIVATE_KEY="${{ secrets.FIREBASE_PRIVATE_KEY }}"
+          FIREBASE_CLIENT_EMAIL=${{ secrets.FIREBASE_CLIENT_EMAIL }}
+          FIREBASE_PRIVATE_KEY_ID=${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
+          FIREBASE_CLIENT_ID=${{ secrets.FIREBASE_CLIENT_ID }}
+          FIREBASE_CLIENT_CERT_URL=${{ secrets.FIREBASE_CLIENT_CERT_URL }}
+          GITHUB_TOKEN=${{ secrets.SERVER_GITHUB_TOKEN }}
+          JIRA_API_TOKEN=${{ secrets.JIRA_API_TOKEN }}
+          JIRA_BASE_URL=${{ secrets.JIRA_BASE_URL }}
+          CIRCLE_CI_TOKEN=${{ secrets.CIRCLE_CI_TOKEN }}
           EOF
 
           # Start server in background
@@ -181,7 +102,7 @@ jobs:
           echo $! > server.pid
 
           # Wait for server to be ready
-          timeout 60 bash -c 'until curl -sf http://localhost:${{ inputs.SERVER_PORT }}/health; do sleep 2; done'
+          timeout 60 bash -c 'until curl -sf http://localhost:${{ secrets.SERVER_PORT || '3000' }}/health; do sleep 2; done'
 
       - name: Run integration tests
         working-directory: ${{ inputs.working-directory }}
@@ -189,8 +110,8 @@ jobs:
           # Set up environment variables for integration tests
           cat > .env << EOF
           NODE_ENV=test
-          SERVER_URL=http://localhost:${{ inputs.SERVER_PORT }}
-          API_SECURITY_KEY=${{ inputs.API_SECURITY_KEY }}
+          SERVER_URL=http://localhost:${{ secrets.SERVER_PORT || '3000' }}
+          API_SECURITY_KEY=${{ secrets.API_SECURITY_KEY }}
           CI=true
           EOF
 
