--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.1",
     "@mui/x-data-grid": "^8.11.2",
+    "@my-dashboard/types": "file:../packages/types",
     "firebase": "^12.2.1",
     "luxon": "^3.7.2",
     "notistack": "^3.0.2",
@@ -40,8 +41,8 @@
     "@types/luxon": "^3.7.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
-    "@vitest/coverage-v8": "^3.2.4",
     "@vitejs/plugin-react": "^5.0.2",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
