--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "node": "v22.16.0"
   },
   "dependencies": {
+    "@my-dashboard/types": "file:../packages/types",
     "@octokit/core": "^7.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
